Fix sign-in button not clickable: load GIS script on-demand, add z-index to header, restore cursor pointer on buttons

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+button, [role="button"] {
+  cursor: pointer;
+}
